WEB: Fix alignment issue on the credits page
The nickname column was using the style from news-author which
has a vertical offset of 8 pixels, so the name was higher than the rest
of the text on the same line (on Safari/Chrome/Opera but not on
Firefox for some reason).

--- a/css/credits.css
+++ b/css/credits.css
@@ -22,6 +22,8 @@ table.credits caption {
 .credits .alias {
 	text-align: left;
 	width: 10em;
+	color: rgb(119, 119, 119);
+	font-style: italic;
 }
 
 .box .subhead-content {
